chore: add node types as dev dependency

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sina Beyraghdar",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.12.13",
     "typescript": "^5.4.5"
   }
 }
